--- a/frontend/login.css
+++ b/frontend/login.css
@@ -10,6 +10,11 @@ body {
     background-color: rgb(223, 223, 223);
 }
 
+h1 {
+    text-align: center;
+    margin-top: 80px;
+    font-size: 45px;
+}
 hr {
     width: inherit;
     height: 1px;
@@ -71,6 +76,7 @@ hr {
     width: 380px;
     height: 40px;
     font-size: 18px;
+    text-indent: 10px;
     background-color: rgb(236, 236, 236);
     border: none;
 }
@@ -81,7 +87,7 @@ hr {
     justify-content: center;
     width: 380px;
     height: 40px;
-    margin-top: 22px;
+    margin-top: 30px;
     background-color: rgb(229, 0, 0);
     transition: 0.2s ease-in;
     cursor: pointer;
