--- a/frontend/backup/login.css
+++ b/frontend/backup/login.css
@@ -13,14 +13,8 @@ body {
 h1 {
     text-align: center;
     margin-top: 80px;
-    font-size: 50px;
+    font-size: 45px;
 }
-
-h2 {
-    margin-top: 25px;
-    font-size: 28px;
-}
-
 hr {
     width: inherit;
     height: 1px;
@@ -28,16 +22,12 @@ hr {
     border: 1px;
 }
 
-input {
-    border-radius: 10px;
-}
-
 .login-con {
     position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 460px;
+    width: 420px;
     height: 640px;
     left: 50%;
     top: 50%;
@@ -70,7 +60,6 @@ input {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 20px;
 }
 
 .login-con .credentials .input-con p {
@@ -85,57 +74,30 @@ input {
 .login-con .credentials .input-con input {
     align-items: flex-start;
     width: 380px;
-    height: 50px;
+    height: 40px;
     font-size: 18px;
     text-indent: 10px;
     background-color: rgb(236, 236, 236);
     border: none;
-    margin-top: 5px;
 }
 
 .login-con .button {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 250px;
-    height: 45px;
-    margin-top: 40px;
-    background-color: rgb(210, 0, 0);
+    width: 380px;
+    height: 40px;
+    margin-top: 30px;
+    background-color: rgb(229, 0, 0);
+    transition: 0.2s ease-in;
     cursor: pointer;
-    border-radius: 10px;
-    box-shadow: 0 7px  rgb(150, 0, 0);
 }
 
 .login-con .button:hover {
-    background-color: rgb(180, 0, 0);
+    background-color: rgb(168, 0, 0);
 }
 
 .login-con .button p {
-    font-size: 20px;
+    font-size: 16px;
     color: white;
-}
-
-.login-con .button:active {
-    transform: translateY(3px);
-    box-shadow: 0 3px  rgb(120, 0, 0);
-}
-
-.login-con .register {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 150px;
-    height: 35px;
-    margin-top: 30px;
-    font-size: 17px;
-
-}
-
-.login-con .register a {
-    color: rgb(92, 92, 92);
-    font-size: 18px;
-}
-
-.login-con .register a:hover {
-    color: black;
 }
