--- a/frontend/login.css
+++ b/frontend/login.css
@@ -28,10 +28,6 @@ hr {
     border: 1px;
 }
 
-input {
-    border-radius: 10px;
-}
-
 .login-con {
     position: absolute;
     display: flex;
@@ -90,6 +86,7 @@ input {
     text-indent: 10px;
     background-color: rgb(236, 236, 236);
     border: none;
+    border: 10px;
     margin-top: 5px;
 }
 
