--- a/frontend/register.css
+++ b/frontend/register.css
@@ -11,13 +11,14 @@ body {
 }
 
 h1 {
+    font-family: 'josefin sans';
     text-align: center;
     margin-top: 80px;
     font-size: 50px;
 }
 
 h2 {
-    margin-top: 25px;
+    margin-top: 40px;
     font-size: 28px;
 }
 
