--- a/frontend/src/register.css
+++ b/frontend/src/register.css
@@ -129,12 +129,12 @@ hr {
     height: 35px;
     margin-top: 30px;
     font-size: 17px;
-
 }
 
 .register-con .login a {
     color: rgb(92, 92, 92);
     font-size: 18px;
+    text-decoration: none;
 }
 
 .register-con .login a:hover {
